@@ -1,3 +1,8 @@
+2006-02-22  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/DevDiscover.pm: 'comment' parameter is copied
+	from DDX to the host level.
+
 2006-02-21  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/Monitor.pm: New monitor parameters:
